# webmag

./: .gitignore  CMakeLists.txt
cmake/: warnings.cmake
include/: webgpu-utils.h
src/: CMakeLists.txt  main.cpp  webgpu-utils.cpp
